Modify .md code syntax

--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -7,7 +7,7 @@ order: 14
 
 ## Default Style
 
-Use the ```table``` class on an HTML ```<table>``` element to use the default styling.
+Use the `table` class on an HTML `<table>` element to use the default styling.
 
 <Preview>
   <table>
@@ -63,7 +63,7 @@ Use the ```table``` class on an HTML ```<table>``` element to use the default st
 
 ## Striped and Hover Styles
 
-Use the ```table--striped``` class on a ```<table>``` to display a zebra-striped styling. To add hover style to the table rows, use the ```table--hover``` class.
+Use the `table--striped` class on a `<table>` to display a zebra-striped styling. To add hover style to the table rows, use the `table--hover` class.
 
 <Preview>
   <table className="table--striped table--hover">
@@ -116,7 +116,7 @@ Use the ```table--striped``` class on a ```<table>``` to display a zebra-striped
 
 ## Responsive, Scrollable Table
 
-Adding the ```<div class="table-responsive"></div>``` as a wrapper element you can make the tables horizontally scrollable.
+Adding the `<div class="table-responsive"></div>` as a wrapper element you can make the tables horizontally scrollable.
 
 ```html
 <div class="table-responsive">
@@ -139,7 +139,7 @@ There are some defaults variables that you can configure to customize the table'
 $table-responsive-width: 40rem;
 ```
 
-Also, Spruce manage the colors in a separate Sass map named ```$colors``` (under the ```table``` object).
+Also, Spruce manage the colors in a separate Sass map named `$colors` (under the `table` object).
 
 ```scss
 $colors: (
