Update layout-stack() mixin

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -273,6 +273,7 @@ Using the help of the `layout-stack` mixin, you can classical stack layout where
 | `$gap`        | `spruce.spacer(m)`       | The margin value between the elements. The value comes from the `$spacers` map.     |
 | `$width`      | `true`                   | Set `width: 100%;` on the stacked elements.                                         |
 | `$align`      | `none`                   | Set explicit align to the elements(`none`, `left`, `right`).                        |
+| `$important`  | `false`                  | Add !important on descandent elements to `margin-block-start`.                      |
 | `$split`      | `0`                      | Split the elements vertically from the nth element.                                 |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L16)
