--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -370,8 +370,8 @@ Using `generate-color-variables()`, we can generate our CSS variables from a map
 
 ```scss
 @include spruce.generate-color-variables(
-  $colors: spruce.$colors,
-  $selector: ':root'
+  spruce.$colors,
+  ':root'
 );
 
 ```
