Update folder structure

--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -50,10 +50,12 @@ sprucecss/
 ├─ preview/           // Spruce preview for development
 │  ├─ ...
 ├─ scss/              // Source .scss files, Spruce CSS itself
+│  ├─ config/         // Variables
+│  ├─ element/
 │  ├─ form/
 │  ├─ function/
 │  ├─ mixin/
-│  ├─ variable/
+│  ├─ plugin/
 │  ├─ ...
 │  ├─ spruce.scss
 ├─ .gitignore
