Add GitHub links to undocumented mixins and functions

--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -134,4 +134,8 @@ Get a value by key name from the `$spacers` map.
 
 ## str-replace
 
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_utilities.scss#L9)
+
 ## svg-escape
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_utilities.scss#L20)
