--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -7,11 +7,11 @@ order: 13
 
 By default Spruce CSS doesn’t generate styles; importing it, you access the variables, mixins, and functions but nothing more. If you wish to use the styling, you have to include them explicitly.
 
-## The goal of the generators
+## The Goal of the Generators
 
 The goal is to separate other Spruce CSS functionality from the style generation and modularity. There can be cases where you don’t need all or any of the given CSS code.
 
-## The difference between generator mixin and a regular mixin
+## The Difference Between Generator Mixin and a Regular Mixin
 
 - A generator mixin is always prefixed with `generator-*`.
 - A generator mixin gives back complete declarations with selectors (you may parameter the selectors). It is a wrapper to call style declarations.
