--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -264,5 +264,5 @@ Adding the `<div class="table-responsive"></div>` as a wrapper element you can m
 
 There are some defaults variables that you can configure to customize the table's look.
 
-- [Colors](http://localhost:8000/docs/sass/variables/#colors)
-- [Display](http://localhost:8000/docs/sass/variables/#tables)
+- [Color variables](http://localhost:8000/docs/sass/variables/#colors)
+- [Display variables](http://localhost:8000/docs/sass/variables/#tables)
