Update media page

--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -2,3 +2,34 @@
 title: 'Media'
 order: 17
 ---
+
+## Images
+
+<Preview>
+  <img src="https://images.unsplash.com/photo-1515060939377-d73d9c162a66?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2052&q=80" alt="A sandy beach with teal colored water from above." />
+</Preview>
+
+```css
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  user-select: none;
+}
+```
+
+## Figure
+
+<Preview>
+<figure class="figure">
+  <img class="figure-img img-fluid rounded" src="https://images.unsplash.com/photo-1534179639155-4910efc143c0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="..."/>
+  <figcaption class="figure-caption">A caption for the above image.</figcaption>
+</figure>
+</Preview>
+
+```html
+<figure class="figure">
+  <img src="..." alt="..."/>
+  <figcaption class="figure-caption">A caption for the above image.</figcaption>
+</figure>
+```
